--- a/src/_includes/components/services-877.html
+++ b/src/_includes/components/services-877.html
@@ -13,22 +13,32 @@
                 <a href="/massages/" class="cs-link">
                     <picture class="cs-picture">
                         <!--Mobile Image -->
-                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/popular-1.jpg" | resize({width: 576, height: 400}) | avif %}" type="image/avif">
-                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/popular-1.jpg" | resize({width: 576, height: 400}) | webp %}" type="image/webp">
-                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/popular-1.jpg" | resize({width: 576, height: 400}) | jpeg %}" type="image/jpeg">
+                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/service-1.jpg" | resize({width: 576, height: 400}) | avif %}" type="image/avif">
+                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/service-1.jpg" | resize({width: 576, height: 400}) | webp %}" type="image/webp">
+                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/service-1.jpg" | resize({width: 576, height: 400}) | jpeg %}" type="image/jpeg">
                         <!--Tablet Image -->
-                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/popular-1.jpg" | resize({width: 634, height: 400}) | avif %}" type="image/avif">
-                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/popular-1.jpg" | resize({width: 634, height: 400}) | webp %}" type="image/webp">
-                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/popular-1.jpg" | resize({width: 634, height: 400}) | jpeg %}" type="image/jpeg">
+                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/service-1.jpg" | resize({width: 634, height: 400}) | avif %}" type="image/avif">
+                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/service-1.jpg" | resize({width: 634, height: 400}) | webp %}" type="image/webp">
+                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/service-1.jpg" | resize({width: 634, height: 400}) | jpeg %}" type="image/jpeg">
                         <!--Desktop Image -->
-                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/popular-1.jpg" | resize({width: 828, height: 400}) | avif %}" type="image/avif">
-                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/popular-1.jpg" | resize({width: 828, height: 400}) | webp %}" type="image/webp">
-                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/popular-1.jpg" | resize({width: 828, height: 400}) | jpeg %}" type="image/jpeg">
-                        <img src="{% getUrl "/assets/images/popular-1.jpg" | resize({width: 688, height: 480}) | jpeg %}" alt="massage" width="413" height="200" loading="lazy" decoding="async" aria-hidden="true">
+                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/service-1.jpg" | resize({width: 828, height: 400}) | avif %}" type="image/avif">
+                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/service-1.jpg" | resize({width: 828, height: 400}) | webp %}" type="image/webp">
+                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/service-1.jpg" | resize({width: 828, height: 400}) | jpeg %}" type="image/jpeg">
+                        <img src="{% getUrl "/assets/images/service-1.jpg" | resize({width: 688, height: 480}) | jpeg %}" alt="Back-Shoulder & Neck Massage" width="413" height="200" loading="lazy" decoding="async" aria-hidden="true">
                     </picture>
-                    <h3 class="cs-h3">Door Cleaning</h3>
+                    <h3 class="cs-h3">Back-Shoulder & Neck Massage</h3>
                     <p class="cs-item-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus beatae placeat!
+                        <strong>40 Min £40</strong>
+                    </p>
+                    <p class="cs-item-text">
+                        <strong>60 Min £55</strong>
+                    </p>
+                    <p class="cs-item-text">
+                        <strong>90 Min £80</strong>
+                    </p>
+                    <br>
+                    <p class="cs-item-text">
+                        Focused treatment targeting common problem areas of the back, neck, and shoulders. Combines traditional Thai techniques with pressure point therapy to release tension and improve mobility.
                     </p>
                 </a>
             </li>
@@ -36,22 +46,32 @@
                 <a href="/massages/" class="cs-link">
                     <picture class="cs-picture">
                         <!--Mobile Image -->
-                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/popular-2.jpg" | resize({width: 576, height: 400}) | avif %}" type="image/avif">
-                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/popular-2.jpg" | resize({width: 576, height: 400}) | webp %}" type="image/webp">
-                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/popular-2.jpg" | resize({width: 576, height: 400}) | jpeg %}" type="image/jpeg">
+                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/service-2.jpg" | resize({width: 576, height: 400}) | avif %}" type="image/avif">
+                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/service-2.jpg" | resize({width: 576, height: 400}) | webp %}" type="image/webp">
+                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/service-2.jpg" | resize({width: 576, height: 400}) | jpeg %}" type="image/jpeg">
                         <!--Tablet Image -->
-                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/popular-2.jpg" | resize({width: 634, height: 400}) | avif %}" type="image/avif">
-                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/popular-2.jpg" | resize({width: 634, height: 400}) | webp %}" type="image/webp">
-                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/popular-2.jpg" | resize({width: 634, height: 400}) | jpeg %}" type="image/jpeg">
+                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/service-2.jpg" | resize({width: 634, height: 400}) | avif %}" type="image/avif">
+                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/service-2.jpg" | resize({width: 634, height: 400}) | webp %}" type="image/webp">
+                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/service-2.jpg" | resize({width: 634, height: 400}) | jpeg %}" type="image/jpeg">
                         <!--Desktop Image -->
-                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/popular-2.jpg" | resize({width: 828, height: 400}) | avif %}" type="image/avif">
-                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/popular-2.jpg" | resize({width: 828, height: 400}) | webp %}" type="image/webp">
-                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/popular-2.jpg" | resize({width: 828, height: 400}) | jpeg %}" type="image/jpeg">
-                        <img src="{% getUrl "/assets/images/popular-2.jpg" | resize({width: 688, height: 480}) | jpeg %}" alt="massage" width="413" height="200" loading="lazy" decoding="async" aria-hidden="true">
+                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/service-2.jpg" | resize({width: 828, height: 400}) | avif %}" type="image/avif">
+                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/service-2.jpg" | resize({width: 828, height: 400}) | webp %}" type="image/webp">
+                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/service-2.jpg" | resize({width: 828, height: 400}) | jpeg %}" type="image/jpeg">
+                        <img src="{% getUrl "/assets/images/service-2.jpg" | resize({width: 688, height: 480}) | jpeg %}" alt="Foot-Leg Massage" width="413" height="200" loading="lazy" decoding="async" aria-hidden="true">
                     </picture>
-                    <h3 class="cs-h3">Door Cleaning</h3>
+                    <h3 class="cs-h3">Foot-Leg Massage</h3>
                     <p class="cs-item-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus beatae placeat!
+                        <strong>40 Min £40</strong>
+                    </p>
+                    <p class="cs-item-text">
+                        <strong>60 Min £55</strong>
+                    </p>
+                    <p class="cs-item-text">
+                        <strong>90 Min £80</strong>
+                    </p>
+                    <br>
+                    <p class="cs-item-text">
+                        Traditional Thai foot and leg therapy uses pressure points to stimulate energy flow. It improves circulation, reduces swelling, and relieves tired, achy legs and feet.
                     </p>
                 </a>
             </li>
@@ -59,22 +79,32 @@
                 <a href="/massages/" class="cs-link">
                     <picture class="cs-picture">
                         <!--Mobile Image -->
-                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/popular-3.jpg" | resize({width: 576, height: 400}) | avif %}" type="image/avif">
-                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/popular-3.jpg" | resize({width: 576, height: 400}) | webp %}" type="image/webp">
-                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/popular-3.jpg" | resize({width: 576, height: 400}) | jpeg %}" type="image/jpeg">
+                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/service-5.jpg" | resize({width: 576, height: 400}) | avif %}" type="image/avif">
+                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/service-5.jpg" | resize({width: 576, height: 400}) | webp %}" type="image/webp">
+                        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/service-5.jpg" | resize({width: 576, height: 400}) | jpeg %}" type="image/jpeg">
                         <!--Tablet Image -->
-                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/popular-3.jpg" | resize({width: 634, height: 400}) | avif %}" type="image/avif">
-                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/popular-3.jpg" | resize({width: 634, height: 400}) | webp %}" type="image/webp">
-                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/popular-3.jpg" | resize({width: 634, height: 400}) | jpeg %}" type="image/jpeg">
+                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/service-5.jpg" | resize({width: 634, height: 400}) | avif %}" type="image/avif">
+                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/service-5.jpg" | resize({width: 634, height: 400}) | webp %}" type="image/webp">
+                        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/service-5.jpg" | resize({width: 634, height: 400}) | jpeg %}" type="image/jpeg">
                         <!--Desktop Image -->
-                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/popular-3.jpg" | resize({width: 828, height: 400}) | avif %}" type="image/avif">
-                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/popular-3.jpg" | resize({width: 828, height: 400}) | webp %}" type="image/webp">
-                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/popular-3.jpg" | resize({width: 828, height: 400}) | jpeg %}" type="image/jpeg">
-                        <img src="{% getUrl "/assets/images/popular-3.jpg" | resize({width: 688, height: 480}) | jpeg %}" alt="massage" width="413" height="200" loading="lazy" decoding="async" aria-hidden="true">
+                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/service-5.jpg" | resize({width: 828, height: 400}) | avif %}" type="image/avif">
+                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/service-5.jpg" | resize({width: 828, height: 400}) | webp %}" type="image/webp">
+                        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/service-5.jpg" | resize({width: 828, height: 400}) | jpeg %}" type="image/jpeg">
+                        <img src="{% getUrl "/assets/images/service-5.jpg" | resize({width: 688, height: 480}) | jpeg %}" alt="Thai Hot Oil Deep Tissue Massage" width="413" height="200" loading="lazy" decoding="async" aria-hidden="true">
                     </picture>
-                    <h3 class="cs-h3">Door Cleaning</h3>
+                    <h3 class="cs-h3">Lymphatic Drainage Massage</h3>
                     <p class="cs-item-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus beatae placeat!
+                        <strong>60 Min £60</strong>
+                    </p>
+                    <p class="cs-item-text">
+                        <strong>90 Min £90</strong>
+                    </p>
+                    <p class="cs-item-text">
+                        <strong>120 Min £110</strong>
+                    </p>
+                    <br>
+                    <p class="cs-item-text">
+                        A gentle, rhythmic massage technique that stimulates lymph flow. Helps reduce swelling, supports the immune system, aids detoxification, and promotes natural healing. Perfect for post-surgery recovery.
                     </p>
                 </a>
             </li>
