--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -52,6 +52,7 @@
             /* 400px - 775px */
             height: clamp(25rem, 70vw, 48.4375rem);
             overflow: hidden;
+            border-radius: clamp(2rem, 4vw, 3rem);
 
             img {
                 position: absolute;
