--- a/src/assets/less/components.less
+++ b/src/assets/less/components.less
@@ -256,6 +256,7 @@
             /* removed at tablet */
             max-height: (400/16rem);
             /* clips img tag corners */
+            border-radius: (24/16rem);
             overflow: hidden;
             /* sends it to the 2nd posiiton in the bottom */
             order: 2;
@@ -309,6 +310,7 @@
             width: (48/16rem);
             height: (48/16rem);
             border: 1px solid var(--primary);
+            border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -477,6 +479,7 @@
             margin: 0;
             box-sizing: border-box;
             border: 1px solid var(--primary);
+            border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -581,6 +584,7 @@
                 position: absolute;
                 top: 0;
                 left: 0;
+                border-radius: (16/16rem);
             }
         }
 
@@ -642,7 +646,7 @@
 @media only screen and (min-width: 64rem) {
     #why-choose-1635 {
         /* set the darker background color on the main div */
-        background-color: #F8F5F1;
+        background-color: #fff;
         overflow: hidden;
         
         .cs-content {
@@ -1648,7 +1652,7 @@
             margin: 0;
             padding: 0;
             background-color: #000;
-            border-radius: (8/16rem);
+            border-radius: (24/16rem);
             /* clips background image corners */
             overflow: hidden;
             box-shadow: 0px 12px 80px 0px rgba(26, 26, 26, 0.08);
