--- a/src/_includes/components/why-choose-1635.html
+++ b/src/_includes/components/why-choose-1635.html
@@ -83,25 +83,21 @@
                         <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/why-us.jpg" | resize({width: 868, height: 752}) | jpeg %}" type="image/jpeg">
                         <img src="{% getUrl "/assets/images/why-us.jpg" | resize({width: 868, height: 828}) | jpeg %}" alt="shop and owner" width="434" height="376" loading="lazy" decoding="async" aria-hidden="true">
                     </picture>
-                    <div class="cs-box">
-                        <span class="cs-header">Attorney Growth</span>
-                        <span class="cs-desc">Aqestic recusandae lauda </span>
-                    </div>
                 </div>
                 <picture class="cs-picture cs-picture2">
                     <!--Mobile Image -->
-                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/why-us.jpg" | resize({width: 200, height: 200}) | avif %}" type="image/avif">
-                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/why-us.jpg" | resize({width: 200, height: 200}) | webp %}" type="image/webp">
-                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/why-us.jpg" | resize({width: 200, height: 200}) | jpeg %}" type="image/jpeg">
+                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/why-us-1.jpg" | resize({width: 200, height: 200}) | avif %}" type="image/avif">
+                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/why-us-1.jpg" | resize({width: 200, height: 200}) | webp %}" type="image/webp">
+                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/why-us-1.jpg" | resize({width: 200, height: 200}) | jpeg %}" type="image/jpeg">
                     <!--Tablet Image -->
-                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/why-us.jpg" | resize({width: 400, height: 400}) | avif %}" type="image/avif">
-                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/why-us.jpg" | resize({width: 400, height: 400}) | webp %}" type="image/webp">
-                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/why-us.jpg" | resize({width: 400, height: 400}) | jpeg %}" type="image/jpeg">
+                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/why-us-1.jpg" | resize({width: 400, height: 400}) | avif %}" type="image/avif">
+                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/why-us-1.jpg" | resize({width: 400, height: 400}) | webp %}" type="image/webp">
+                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/why-us-1.jpg" | resize({width: 400, height: 400}) | jpeg %}" type="image/jpeg">
                     <!--Desktop Image -->
-                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/why-us.jpg" | resize({width: 400, height: 400}) | avif %}" type="image/avif">
-                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/why-us.jpg" | resize({width: 400, height: 400}) | webp %}" type="image/webp">
-                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/why-us.jpg" | resize({width: 400, height: 400}) | jpeg %}" type="image/jpeg">
-                    <img src="{% getUrl "/assets/images/why-us.jpg" | resize({width: 400, height: 400}) | jpeg %}" alt="shop and owner" width="197" height="197" loading="lazy" decoding="async" aria-hidden="true">
+                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/why-us-1.jpg" | resize({width: 400, height: 400}) | avif %}" type="image/avif">
+                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/why-us-1.jpg" | resize({width: 400, height: 400}) | webp %}" type="image/webp">
+                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/why-us-1.jpg" | resize({width: 400, height: 400}) | jpeg %}" type="image/jpeg">
+                    <img src="{% getUrl "/assets/images/why-us-1.jpg" | resize({width: 400, height: 400}) | jpeg %}" alt="shop and owner" width="197" height="197" loading="lazy" decoding="async" aria-hidden="true">
                 </picture>
             </div>
         </div>
