--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -7,6 +7,7 @@
 @media only screen and (min-width: 0rem) {
     #sbs-867 {
         padding: var(--sectionPadding);
+        background-color: #f7f7f7;
 
         .cs-container {
             width: 100%;
@@ -53,6 +54,8 @@
             /* 400px - 775px */
             height: clamp(25rem, 70vw, 48.4375rem);
             overflow: hidden;
+            border-radius: clamp(2rem, 4vw, 3rem);
+            /* clips the corners of the children around the border radius */
 
             img {
                 position: absolute;
@@ -127,6 +130,7 @@
 @media only screen and (min-width: 0rem) {
     #sbs-r-870 {
         padding: var(--sectionPadding);
+        background-color: #f7f7f7;
 
         .cs-container {
             width: 100%;
@@ -173,6 +177,8 @@
             /* 400px - 775px */
             height: clamp(25rem, 70vw, 48.4375rem);
             overflow: hidden;
+            border-radius: clamp(2rem, 4vw, 3rem);
+            /* clips the corners of the children around the border radius */
 
             img {
                 position: absolute;
@@ -281,11 +287,13 @@
             height: clamp(22.5rem, 54vw, 25rem);
             display: block;
             position: relative;
+            
 
             img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                border-radius: (24/16rem);
             }
         }
 
@@ -308,6 +316,7 @@
             /* clips all corners of the button that overlap the rounded border */
             overflow: hidden;
             transition: border-bottom 0.3s;
+            border-radius: (24/16rem);
 
             &.active {
                 .cs-button {
