--- a/src/_includes/components/services-877.html
+++ b/src/_includes/components/services-877.html
@@ -3,7 +3,7 @@
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">Services</span>
-            <h2 class="cs-title">Here to Help You Find a Path Forward</h2>
+            <h2 class="cs-title">Massages that we offer</h2>
             <p class="cs-text">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque, minus temporibus debitis quo nulla molestias quibusdam quisquam dicta eligendi nam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, eum.
             </p>
