--- a/src/_includes/components/why-choose-1635.html
+++ b/src/_includes/components/why-choose-1635.html
@@ -3,7 +3,7 @@
         <div class="cs-content">
             <div class="cs-flex">
                 <span class="cs-topper">Why Choose Us</span>
-                <h2 class="cs-title">Grow Your Business with Our New Bold Agency</h2>
+                <h2 class="cs-title">Why a customer should choose us</h2>
             </div>
             <p class="cs-text">
                 Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga dolor error perspiciatis voluptatem eum cupiditate totam reiciendis quam minus inventore sint rem impedit esse quasi Tenetur sed reprehenderit earum a magni aliquid blanditiis dolores, veritatis soluta autem beatae officia expedita ipsum rerum doloribus sit provident delectus.
@@ -22,9 +22,9 @@
                     </span>
                     <!-- Text Grouped For Flexbox-->
                     <div class="cs-text-group">
-                        <h3 class="cs-h3">Answer a Few Questions</h3>
+                        <h3 class="cs-h3">Reason 1</h3>
                         <p class="cs-item-text">
-                            We welcome and celebrate different perspectives to help our firm, our clients and our people adip iscing elit achieve.
+                            Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga dolor error perspiciatis 
                         </p>
                     </div>
                 </li>
@@ -40,9 +40,9 @@
                     </span>
                     <!-- Text Grouped For Flexbox-->
                     <div class="cs-text-group">
-                        <h3 class="cs-h3">Answer a Few Questions</h3>
+                        <h3 class="cs-h3">Reason 2</h3>
                         <p class="cs-item-text">
-                            We welcome and celebrate different perspectives to help our firm, our clients and our people adip iscing elit achieve.
+                            Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga dolor error perspiciatis
                         </p>
                     </div>
                  </li>
@@ -59,9 +59,9 @@
                     </span>
                     <!-- Text Grouped For Flexbox-->
                     <div class="cs-text-group">
-                        <h3 class="cs-h3">Answer a Few Questions</h3>
+                        <h3 class="cs-h3">Reason 3</h3>
                         <p class="cs-item-text">
-                            We welcome and celebrate different perspectives to help our firm, our clients and our people adip iscing elit achieve.
+                            Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga dolor error perspiciatis
                         </p>
                     </div>
                  </li>
