--- a/src/_includes/components/hero-1469.html
+++ b/src/_includes/components/hero-1469.html
@@ -1,11 +1,9 @@
 <section id="hero-1469">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">Daycare & Preschool</span>
-            <h1 class="cs-title">Together We’ll Explore
-                New Things</h1>
+            <h1 class="cs-title">Massage in Skipton</h1>
             <p class="cs-text">
-                Our mission is to provide affordable, high-quality early education and childcare services for working families to ensure every child.
+                Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga dolor error perspiciatis voluptatem eum cupiditate totam reiciendis quam minus  
             </p>
             <a href="{{client.onlineBooking}}" target="_blank" rel="noopener" class="cs-button-solid">Schedule A Massage</a>
         </div>
